platform/deployment-authproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: platform
  name: platform
  namespace: arcade
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: platform
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: platform
    spec:
      serviceAccountName: proxy
      containers:
      - name: oauth-proxy
        image: image-registry.openshift-image-registry.svc:5000/openshift/oauth-proxy:v4.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: public
        args:
        - --http-address=:8081
        - --provider=openshift
        - --openshift-service-account=proxy
        - --cookie-secret=SECRET
        - --provider=openshift
        - --upstream=http://localhost:8080
        - --openshift-service-account=proxy
        - --https-address=
        - "--skip-auth-regex=^/manifest.json$"
      - image: quay.io/mdewald/s3e-platform:latest
        imagePullPolicy: Always
        name: s3e-platform
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
